# waylate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY.md  PKGBUILD  README.md  SECURITY.md  install.sh  package-lock.json  package.json
.claude/specs/: requirements.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: fix-sessions.md  github.md  model-profiles.md  wayland-shortcuts.md
packaging/: README.md  dev.jar.waylate.desktop
scripts/: install-local-release  package-release  waylate-ct2-server  waylate-ct2-translate
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  clipboard.rs  config.rs  gpu_runtime.rs  history.rs  lib.rs  main.rs  models.rs  runtime.rs  secrets.rs  translation.rs
src-tauri/src/engines/: mod.rs  onnx_mt.rs
src/routes/: +page.svelte
