[package]
name = "waylate"
version = "0.1.4"
description = "Wayland-first local translator for Arch and KDE Plasma"
authors = ["jar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "waylate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6.0.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-single-instance = "2.4.2"
opener = "0.8.5"
chrono = { version = "0.4.45", features = ["serde"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "blocking", "rustls", "form"] }
keyring = "4.1.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
ndarray = "0.16"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "tls-native", "api-24"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
sha2 = "0.11"
libc = "0.2"
flate2 = "1"
tar = "0.4"
